Fix grid issue when collection title too long

--- a/src/components/collection/card/CollectionCard.less
+++ b/src/components/collection/card/CollectionCard.less
@@ -30,10 +30,10 @@
     font-size: 18px;
 
     &.clamp-2-lines {
-      max-height: 48px;
+      max-height: 24px;
       text-overflow: ellipsis;
       overflow: hidden;
-      -webkit-line-clamp: 2;
+      -webkit-line-clamp: 1;
       -webkit-box-orient: vertical;
       display: -webkit-box;
       width: 90%;
